tests/should_fail/bug/771.stderr
error: Predicates must have boolean return types
 --> 771.rs:5:18
  |
5 | fn not_boolean() -> () {}
  |                  ^^^^^

error: Predicates must have boolean return types
 --> 771.rs:8:19
  |
8 | fn not_boolean2() -> u32 {}
  |                   ^^^^^^

error: Predicates must have boolean return types
  --> 771.rs:11:1
   |
11 | fn not_boolean3() {}
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

